MODDCB-241: Upgrade to Spring Boot v4.0.2 (#236)